optimizando imagenes y documentando pruebas unitarias

--- a/documentation/interfaces/Juego.html
+++ b/documentation/interfaces/Juego.html
@@ -442,21 +442,21 @@ export class IndexComponent {
         id:&quot;play51&quot;,
         categoria: &quot;play5&quot;,
         titulo:&quot;Play5 01&quot;,
-        Image: &quot;assets/images/play51.png&quot;,
+        Image: &quot;assets/images/play5/play51.png&quot;,
         precio: 100,
     },
     {
       id:&quot;play52&quot;,
       categoria: &quot;play5&quot;,
       titulo:&quot;Play5 02&quot;,
-      Image: &quot;assets/images/play52.png&quot;,
+      Image: &quot;assets/images/play5/play52.png&quot;,
       precio: 100,
     },
     {
       id:&quot;play53&quot;,
       categoria: &quot;play5&quot;,
       titulo:&quot;Play5 03&quot;,
-      Image: &quot;assets/images/play53.png&quot;,
+      Image: &quot;assets/images/play5/play53.png&quot;,
       precio: 100,
     },
     {
