--- a/documentation/modules/AppRoutingModule.html
+++ b/documentation/modules/AppRoutingModule.html
@@ -138,7 +138,7 @@ import { NgModule } from &#x27;@angular/core&#x27;;
 import { Routes, RouterModule } from &#x27;@angular/router&#x27;;
 import { PerfilComponent } from &#x27;./components/perfil/perfil.component&#x27;;
 import { RecuperacionComponent } from &#x27;./components/recuperacion/recuperacion.component&#x27;;
-
+import { HttpClientModule } from &#x27;@angular/common/http&#x27;;
 
 export const routes: Routes &#x3D; [
     //esto indica cual es la primera pagina que se debe inicar junto con la app
