--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -202,40 +202,40 @@
                 <span class="coverage-count">(0/1)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AdminComponent.html">src/app/components/admin/admin.component.ts</a>
             </td>
             <td>component</td>
             <td>AdminComponent</td>
-            <td align="right" data-sort="57">
-                <span class="coverage-percent">57 %</span>
-                <span class="coverage-count">(4/7)</span>
+            <td align="right" data-sort="87">
+                <span class="coverage-percent">87 %</span>
+                <span class="coverage-count">(7/8)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/CarritoComponent.html">src/app/components/carrito/carrito.component.ts</a>
             </td>
             <td>component</td>
             <td>CarritoComponent</td>
-            <td align="right" data-sort="72">
-                <span class="coverage-percent">72 %</span>
-                <span class="coverage-count">(8/11)</span>
+            <td align="right" data-sort="90">
+                <span class="coverage-percent">90 %</span>
+                <span class="coverage-count">(9/10)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/IndexComponent.html">src/app/components/index/index.component.ts</a>
             </td>
             <td>component</td>
             <td>IndexComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(7/14)</span>
+            <td align="right" data-sort="78">
+                <span class="coverage-percent">78 %</span>
+                <span class="coverage-count">(11/14)</span>
             </td>
         </tr>
         <tr class="low">
@@ -262,16 +262,16 @@
                 <span class="coverage-count">(2/4)</span>
             </td>
         </tr>
-        <tr class="good">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/PerfilComponent.html">src/app/components/perfil/perfil.component.ts</a>
             </td>
             <td>component</td>
             <td>PerfilComponent</td>
-            <td align="right" data-sort="71">
-                <span class="coverage-percent">71 %</span>
-                <span class="coverage-count">(5/7)</span>
+            <td align="right" data-sort="80">
+                <span class="coverage-percent">80 %</span>
+                <span class="coverage-count">(8/10)</span>
             </td>
         </tr>
         <tr class="good">
@@ -301,13 +301,49 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./injectables/AuthService.html">src/app/components/services/services.component.ts</a>
+                <a href="./injectables/CarritoService.html">src/app/components/services/carrito.service.ts</a>
             </td>
             <td>injectable</td>
-            <td>AuthService</td>
+            <td>CarritoService</td>
+            <td align="right" data-sort="90">
+                <span class="coverage-percent">90 %</span>
+                <span class="coverage-count">(9/10)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/JuegosService.html">src/app/components/services/juegos.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>JuegosService</td>
             <td align="right" data-sort="83">
                 <span class="coverage-percent">83 %</span>
                 <span class="coverage-count">(5/6)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/SessionService.html">src/app/components/services/session.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>SessionService</td>
+            <td align="right" data-sort="87">
+                <span class="coverage-percent">87 %</span>
+                <span class="coverage-count">(7/8)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/UsuariosService.html">src/app/components/services/usuarios.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>UsuariosService</td>
+            <td align="right" data-sort="88">
+                <span class="coverage-percent">88 %</span>
+                <span class="coverage-count">(8/9)</span>
             </td>
         </tr>
         <tr class="low">
